crates/escalier_parser/src/snapshots/escalier_parser__tests__object_types.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"type Pick<T, K extends keyof T> = {[P in K]: T[P]};\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 51,
                    },
                },
                span: 0..51,
                declare: false,
                id: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 5,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 5..9,
                    name: "Pick",
                },
                type_ann: TypeAnn {
                    kind: Mapped(
                        MappedType {
                            type_param: TypeParam {
                                span: 36..42,
                                name: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 36,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 37,
                                        },
                                    },
                                    span: 36..37,
                                    name: "P",
                                },
                                constraint: Some(
                                    TypeAnn {
                                        kind: TypeRef(
                                            TypeRef {
                                                name: "K",
                                                type_args: None,
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 41,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 42,
                                            },
                                        },
                                        span: 41..42,
                                        inferred_type: None,
                                    },
                                ),
                                default: None,
                            },
                            optional: None,
                            mutable: None,
                            type_ann: TypeAnn {
                                kind: IndexedAccess(
                                    IndexedAccessType {
                                        obj_type: TypeAnn {
                                            kind: TypeRef(
                                                TypeRef {
                                                    name: "T",
                                                    type_args: None,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 45,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 46,
                                                },
                                            },
                                            span: 45..46,
                                            inferred_type: None,
                                        },
                                        index_type: TypeAnn {
                                            kind: TypeRef(
                                                TypeRef {
                                                    name: "P",
                                                    type_args: None,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 47,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 48,
                                                },
                                            },
                                            span: 47..48,
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 45,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 49,
                                    },
                                },
                                span: 45..49,
                                inferred_type: None,
                            },
                        },
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 34,
                        },
                        end: Position {
                            line: 0,
                            column: 50,
                        },
                    },
                    span: 34..50,
                    inferred_type: None,
                },
                type_params: Some(
                    [
                        TypeParam {
                            span: 10..11,
                            name: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 11,
                                    },
                                },
                                span: 10..11,
                                name: "T",
                            },
                            constraint: None,
                            default: None,
                        },
                        TypeParam {
                            span: 13..30,
                            name: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 14,
                                    },
                                },
                                span: 13..14,
                                name: "K",
                            },
                            constraint: Some(
                                TypeAnn {
                                    kind: KeyOf(
                                        KeyOfType {
                                            type_ann: TypeAnn {
                                                kind: TypeRef(
                                                    TypeRef {
                                                        name: "T",
                                                        type_args: None,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 29,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 30,
                                                    },
                                                },
                                                span: 29..30,
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 30,
                                        },
                                    },
                                    span: 23..30,
                                    inferred_type: None,
                                },
                            ),
                            default: None,
                        },
                    ],
                ),
            },
        ],
    },
)
